Feat: #224 현재 사용자 정보를 조회하는 기능을 구현함 (#225)
* Feat: 현재 로그인한 사용자 정보를 조회하는 기능을 구현함

* Remove: 더 이상 사용되지 않는 테스트 제거

* Test: 유닛 테스트 및 문서 테스트 추가

* Test: 순환 의존성을 제거함